fixed alignment and layout of the department news box

--- a/wp-content/themes/govintranetpress/css/style.css
+++ b/wp-content/themes/govintranetpress/css/style.css
@@ -753,9 +753,9 @@ body.home .ht-feature-news h3 {
 .ht-feature-news.small-news .more-in-news {
   border-top: 1px solid #888;
 }
-/* line 109, ../scss/widgets/ht_feature_news/_main.scss */
+/* line 108, ../scss/widgets/ht_feature_news/_main.scss */
 .ht-feature-news.department-news .news-item {
-  float: left;
+  display: inline-block;
   width: 50%;
   padding-right: 20px;
   border-top: none !important;
@@ -763,7 +763,7 @@ body.home .ht-feature-news h3 {
 }
 
 @media only screen and (max-width: 767px) {
-  /* line 122, ../scss/widgets/ht_feature_news/_main.scss */
+  /* line 121, ../scss/widgets/ht_feature_news/_main.scss */
   .ht-feature-news.department-news .news-item {
     width: 100%;
   }
@@ -954,6 +954,10 @@ body.home .ht-feature-news h3 {
 /* line 69, ../scss/content/homepage/_main.scss */
 .home.page .feeds img {
   width: 100%;
+}
+/* line 75, ../scss/content/homepage/_main.scss */
+.home.page .department-news-container h3 {
+  margin-bottom: 0;
 }
 
 /* line 2, ../scss/content/guidance_and_support/_main.scss */
