--- a/wp-content/themes/govintranetpress/scss/content/homepage/_main.scss
+++ b/wp-content/themes/govintranetpress/scss/content/homepage/_main.scss
@@ -70,6 +70,12 @@
       width: 100%;
     }
   }
+
+  .department-news-container {
+    h3 {
+      margin-bottom: 0;
+    }
+  }
 }
 
 @media only screen and (max-width: 992px) {
