--- a/wp-content/themes/govintranetpress/scss/widgets/ht_feature_news/_main.scss
+++ b/wp-content/themes/govintranetpress/scss/widgets/ht_feature_news/_main.scss
@@ -105,9 +105,8 @@
   }
 
   &.department-news {
-
     .news-item {
-      float: left;
+      display: inline-block;
       width: 50%;
       padding-right: 20px;
       border-top: none !important;
